# OpenCV-4-Computer-Vision-Application-Programming-Cookbook-Fourth-Edition

./: CMakeLists.txt  README.md
Chapter01/: mat.cpp
Chapter03/: colorDetection.cpp  colordetector.cpp  colordetector.h  huesaturation.cpp
Chapter04/: CMakeLists.txt  colorhistogram.h  contentFinder.cpp  contentFinder.h  finder.cpp  histograms.cpp  imageComparator.h  retrieve.cpp
Chapter05/: morphology.cpp
Chapter08/: interestPoints.cpp
Chapter09/: binaryDescriptors.cpp  matcher.cpp  patches.cpp
Chapter10/: estimateF.cpp  estimateH.cpp  matchingTarget.cpp  robustmatching.cpp  targetMatcher.h
Chapter11/: CameraCalibrator.cpp  CameraCalibrator.h  estimateE.cpp  stereoMatcher.cpp
Chapter13/: featuretracker.h  flow.cpp  oTracker.cpp
Chapter14/: recognizeFace.cpp  trainSVM.cpp
Chapter15/: CMakeLists.txt  face_detection.cpp  object_detection_yolov3.cpp  opencvjs_sample.html
Chapter15/data/: common.js
